--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "@upstash/redis": "^1.35.7",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
@@ -27,7 +28,6 @@
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
-    
     "razorpay": "^2.9.6",
     "redis": "^5.8.2",
     "sib-api-v3-sdk": "^8.5.0"
